@@ -1,1 +1,1 @@
-/* Reset */ol,ul{padding-left:1.1em}ol ol,ul ul,ol ul,ul ol{margin-bottom:0}dt{font-weight:700}dd{margin-bottom:.5rem;margin-left:0}
+/* Reset */ol,ul{padding-left:1.1em}ol ol,ul ul,ol ul,ul ol{margin-bottom:0}dt{font-weight:700}dd{margin-bottom:.5rem;margin-left:0}/* Styles */.wp-block-list[class*='is-style-icon--']{list-style:none;padding-left:1.5em}.wp-block-list[class*='is-style-icon--'] li::before{content:'';mask:var(--wp--marker) no-repeat center;-webkit-mask:var(--wp--marker) no-repeat center;position:absolute;display:inline-block;width:1.5em;height:1.5em;margin-left:-1.75em;background:var(--wp--marker--color,currentColor)}
