@@ -12,8 +12,9 @@
     <!-- wp:paragraph {"align":"center","className":"aligncenter aligncenter","fontSize":"small"} -->
     <p class="has-text-align-center aligncenter has-small-font-size">Everything in Basic plan with unlimited use plus:</p>
     <!-- /wp:paragraph -->
-    <!-- wp:list {"style":{"spacing":{"blockGap":"0.5em","margin":{"top":"1em"}}},"layout":{"type":"default"}} -->
-    <ul style="margin-top:1em"><!-- wp:list-item -->
+    <!-- wp:list {"style":{"spacing":{"margin":{"top":"1em"},"blockGap":"0.3em"}},"className":"is-style-icon\u002d\u002dcheck-circle-outline","layout":{"type":"default"},"customStyle":"selector {\n  \u002d\u002dwp\u002d\u002dmarker\u002d\u002dcolor: var(\u002d\u002dwp\u002d\u002dpreset\u002d\u002dcolor\u002d\u002dprimary);\n}\n"} -->
+    <ul style="margin-top:1em" class="is-style-icon--check-circle-outline">
+        <!-- wp:list-item -->
         <li>Lorem ipsum dolor sit</li>
         <!-- /wp:list-item -->
         <!-- wp:list-item -->
